# OpenAPIClient/Classes/OpenAPIs/Models/OrderDtoVendor.swift
@@ -1,0 +1,33 @@
+//
+// OrderDtoVendor.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+import AnyCodable
+#endif
+
+public enum OrderDtoVendor: Codable, JSONEncodable, Hashable {
+    case typeVendorDto(VendorDto)
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.singleValueContainer()
+        switch self {
+        case .typeVendorDto(let value):
+            try container.encode(value)
+        }
+    }
+
+    public init(from decoder: Decoder) throws {
+        let container = try decoder.singleValueContainer()
+        if let value = try? container.decode(VendorDto.self) {
+            self = .typeVendorDto(value)
+        } else {
+            throw DecodingError.typeMismatch(Self.Type.self, .init(codingPath: decoder.codingPath, debugDescription: "Unable to decode instance of OrderDtoVendor"))
+        }
+    }
+}
+
