# OpenAPIClient/Classes/OpenAPIs/Models/OrderItemDtoInventoryItem.swift
@@ -1,0 +1,33 @@
+//
+// OrderItemDtoInventoryItem.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+import AnyCodable
+#endif
+
+public enum OrderItemDtoInventoryItem: Codable, JSONEncodable, Hashable {
+    case typeInventoryItemDto(InventoryItemDto)
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.singleValueContainer()
+        switch self {
+        case .typeInventoryItemDto(let value):
+            try container.encode(value)
+        }
+    }
+
+    public init(from decoder: Decoder) throws {
+        let container = try decoder.singleValueContainer()
+        if let value = try? container.decode(InventoryItemDto.self) {
+            self = .typeInventoryItemDto(value)
+        } else {
+            throw DecodingError.typeMismatch(Self.Type.self, .init(codingPath: decoder.codingPath, debugDescription: "Unable to decode instance of OrderItemDtoInventoryItem"))
+        }
+    }
+}
+
